[project]
name = "project1-ksenofontov-konstantin-m25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "ksenofkv",email = "ksenof.kv@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [
    { include = "labyrinth_game" },
]
 
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"
[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest (>=9.0.1,<10.0.0)"
]
