[project]
name = "project1-ksenofontov-konstantin-m25-555"
version = "0.1.0"
description = "https://github.com/ksenofkv/project1_Ksenofontov_Konstantin_M25-555"
authors = [
    {name = "ksenofkv",email = "ksenof.kv@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [
    { include = "labyrinth_game" },
]
 
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"
[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "ruff (>=0.14.5,<0.15.0)"
]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [".venv", ".git", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []